# EVM

Course project/: CMakeLists.txt
Course project/headers/: arkanoid.h  array_2d.h  image.h  message_queue.h  motion_detector.h  timer.h  window.h
Course project/sources/: main.cpp  timer.cpp
